--- a/temperature-monitoring-subsystem/platformio.ini
+++ b/temperature-monitoring-subsystem/platformio.ini
@@ -12,6 +12,8 @@
 platform = espressif32
 board = esp32-s3-devkitm-1
 framework = arduino
-lib_deps = knolleary/PubSubClient@^2.8
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	bblanchon/ArduinoJson@^7.3.0
 monitor_port = /dev/ttyACM0
 monitor_speed = 115200
