--- a/window-controller/platformio.ini
+++ b/window-controller/platformio.ini
@@ -15,3 +15,5 @@ framework = arduino
 lib_deps = 
 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
 	paulstoffregen/TimerOne@^1.2.0
+monitor_port = /dev/ttyACM0
+monitor_speed = 9600
