--- a/controlUnit/pom.xml
+++ b/controlUnit/pom.xml
@@ -38,9 +38,11 @@
 
     <!-- JSSC -->
     <dependency>
-        <groupId>org.scream3r</groupId>
-        <artifactId>jssc</artifactId>
-        <version>2.8.0</version>
+      <groupId>com.example</groupId>
+      <artifactId>jssc</artifactId>
+      <version>1.0</version>
+      <scope>system</scope>
+      <systemPath>/Users/riccardopolazzi/Desktop/assignment-03/controlUnit/lib/*.jar</systemPath>
     </dependency>
   </dependencies>
 
