--- a/controlUnit/pom.xml
+++ b/controlUnit/pom.xml
@@ -38,12 +38,11 @@
 
     <!-- JSSC -->
     <dependency>
-      <groupId>com.example</groupId>
-      <artifactId>jssc</artifactId>
-      <version>1.0</version>
-      <scope>system</scope>
-      <systemPath>/Users/riccardopolazzi/Desktop/assignment-03/controlUnit/lib/*.jar</systemPath>
+        <groupId>org.scream3r</groupId>
+        <artifactId>jssc</artifactId>
+        <version>2.8.0</version>
     </dependency>
+
   </dependencies>
 
 </project>
